<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urdf_tutorial</name>
  <version>1.0.0</version>

  <description>This package contains a number of URDF tutorials.</description>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
