<?xml version="1.0"?>
<package>
  <name>urdf_sim_tutorial</name>
  <version>0.3.0</version>
  <description>The urdf_sim_tutorial package</description>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf_tutorial</run_depend>
  <run_depend>xacro</run_depend>

</package>
